@@ -651,9 +651,11 @@ def login_user(browser,
             #
             #
             indicator_selector = "//div[@class='eiCW-']|//img[@class='_6q-tv']|//button[text()='Send Security Code']"
+            twoway_page_selector = "//input[@name='verificationCode']"
             suspicious_page_selector = "//button[text()='Close']|//button[text()='This Was Me']"
             block_selector = "//input[@name='fullName']"
-            indicator_selector = indicator_selector + "|" + suspicious_page_selector + "|" + block_selector
+            indicator_selector = indicator_selector + "|" + twoway_page_selector + \
+                                 "|" + suspicious_page_selector + "|" + block_selector
 
             try:
                 # if page_after_login is not "", then it's not the first attemp, let wait a bit
@@ -692,6 +694,10 @@ def login_user(browser,
                     super_print("[login_user] it means authentication-page arrived, need to enter security code")
                     current_page = "AUTHENTICATION"
                     break
+                elif indicator_ele.get_attribute("name") == "verificationCode":
+                    super_print("[login_user] it means two-way authentication page, need to enter security code")
+                    current_page = "TWO-WAY-AUTHENTICATION"
+                    break
                 elif indicator_ele.get_attribute("name") == "fullName":
                     super_print("[login_user] it means we may be blocked. login failed. ({} login retries left)"
                                 .format(retry_login))
@@ -726,7 +732,7 @@ def login_user(browser,
     #
     if current_page == "HOME":
         pass
-    elif current_page == "AUTHENTICATION":
+    elif current_page == "AUTHENTICATION" or current_page == "TWO-WAY-AUTHENTICATION":
         #
         #
         #   the most complicated part
@@ -735,86 +741,91 @@ def login_user(browser,
         #
         #
 
-        # collection page elements and analyse situation
-        env.event("LOGIN", "DETECTING-AUTHENTICATION-CHOICES")
-        # choice0 = None
-        # choice1 = None
-        # try:
-        #     choice0 = browser.find_element_by_xpath("//label[@for='choice_0']")
-        # except Exception:
-        #     choice0 = None
-        #     pass
-        # try:
-        #     choice1 = browser.find_element_by_xpath("//label[@for='choice_1']")
-        # except Exception:
-        #     choice1 = None
-        #     pass
-        #
-        #   a better way,
-        #   find two possible choices at the same time
-        #
-        choices = None
-        send_code_button = None
-        try:
-            choices = browser.find_elements_by_xpath("//label[@for='choice_0']|//label[@for='choice_1']")
-            send_code_button = browser.find_element_by_xpath("//button[text()='Send Security Code']")
-        except Exception:
-            env.event("LOGIN", "CANT-FIND-SECURITY-CODE-CONTROLS")
-            return False
-
-        choice_made = None
-        # if we have got both methods of sending code, let user choose one
-        if len(choices) > 1:
-            # ask for a choice
-            if query_mode:
-                env.event("LOGIN", "WAITING-FOR-CHOICE-TO-SEND-CODE", {"choices": [
-                    {"name": "0", "value": choices[0].text},
-                    {"name": "1", "value": choices[1].text}
-                ]})
-                try:
-                    # latest = query_latest({"authenticationChoice": choice_made})
-                    latest = query_latest1(["queryAuthenticationChoice"])
-                except:
-                    raise
-                choice_made = latest["queryAuthenticationChoice"]
-            else:
-                super_print("[login_user] choose a method to receive security code from instagram:\n0: " +
-                            choices[0].text + "\n1: " + choices[1].text)
-                choice_made = str(input())
-            # apply the choice
-            if choice_made == "0":
-                choice_made = choices[0]
-            else:
-                choice_made = choices[1]
-        # only one choice is available, and that one will be used
-        else:
-            choice_made = choices[0]
-
-        choice_text = choice_made.text
-        # click on the choice label
-        (ActionChains(browser)
-         .move_to_element(choice_made)
-         .click()
-         .perform())
-        # click send code button
-        (ActionChains(browser)
-         .move_to_element(send_code_button)
-         .click()
-         .perform())
-        super_print("[login_user] a security code has been sent to " + choice_text)
-        env.event("LOGIN", "SECURITY-CODE-REQUESTED")
-
-        # wait for security code page to load
+        # security code page controls (for both regular-authentication & two-way authentication)
         input_code = None
         button_submit = None
         newcode_link = None
-        try:
-            input_code = explicit_wait(browser, "VOEL", ["//input[@id='security_code']", "XPath"], logger, 15, True)
-            button_submit = browser.find_element_by_xpath("//button[text()='Submit']")
-            newcode_link = browser.find_element_by_xpath("//a[text()='Get a new one']")
-        except Exception:
-            # time out
-            return False
+        choice_text = ""
+        fail_selector = ""
+
+        #
+        # regular-authentication
+        #
+        if current_page == "AUTHENTICATION":
+
+            env.event("LOGIN", "DETECTING-AUTHENTICATION-CHOICES")
+
+            choices = None
+            send_code_button = None
+            try:
+                choices = browser.find_elements_by_xpath("//label[@for='choice_0']|//label[@for='choice_1']")
+                send_code_button = browser.find_element_by_xpath("//button[text()='Send Security Code']")
+            except Exception:
+                env.event("LOGIN", "CANT-FIND-SECURITY-CODE-CONTROLS")
+                return False
+
+            choice_made = None
+            # if we have got both methods of sending code, let user choose one
+            if len(choices) > 1:
+                # ask for a choice
+                if query_mode:
+                    env.event("LOGIN", "WAITING-FOR-CHOICE-TO-SEND-CODE", {"choices": [
+                        {"name": "0", "value": choices[0].text},
+                        {"name": "1", "value": choices[1].text}
+                    ]})
+                    try:
+                        # latest = query_latest({"authenticationChoice": choice_made})
+                        latest = query_latest1(["queryAuthenticationChoice"])
+                    except:
+                        raise
+                    choice_made = latest["queryAuthenticationChoice"]
+                else:
+                    super_print("[login_user] choose a method to receive security code from instagram:\n0: " +
+                                choices[0].text + "\n1: " + choices[1].text)
+                    choice_made = str(input())
+                # apply the choice
+                if choice_made == "0":
+                    choice_made = choices[0]
+                else:
+                    choice_made = choices[1]
+            # only one choice is available, and that one will be used
+            else:
+                choice_made = choices[0]
+
+            choice_text = choice_made.text
+            # click on the choice label
+            (ActionChains(browser)
+             .move_to_element(choice_made)
+             .click()
+             .perform())
+            # click send code button
+            (ActionChains(browser)
+             .move_to_element(send_code_button)
+             .click()
+             .perform())
+            super_print("[login_user] a security code has been sent to " + choice_text)
+            env.event("LOGIN", "SECURITY-CODE-REQUESTED")
+
+            try:
+                input_code = explicit_wait(browser, "VOEL", ["//input[@id='security_code']", "XPath"], logger, 15, True)
+                button_submit = browser.find_element_by_xpath("//button[text()='Submit']")
+                newcode_link = browser.find_element_by_xpath("//a[text()='Get a new one']")
+            except Exception:
+                # time out
+                return False
+
+            fail_selector = "//p[text()='Please check the code we sent you and try again.']"
+
+        #
+        #   two-way-authentication
+        #
+        else:
+            input_code = explicit_wait(browser, "VOEL", ["//input[@name='verificationCode']", "XPath"],
+                                       logger, 15, True)
+            button_submit = browser.find_element_by_xpath("//button[text()='Confirm']")
+            newcode_link = browser.find_element_by_xpath("//button[text()='resend it']")
+            choice_text = browser.find_element_by_xpath("//div[@id='verificationCodeDescription']").text
+            fail_selector = "//p[@id='twoFactorErrorAlert']"
 
         # read and send security code
         security_code = None
@@ -860,7 +871,7 @@ def login_user(browser,
 
             try:
                 success_selector = "//img[@class='_6q-tv']"
-                fail_selector = "//p[text()='Please check the code we sent you and try again.']"
+                # fail_selector = "//p[text()='Please check the code we sent you and try again.']"
                 suspicious_page_selector = "//button[text()='Close']|//button[text()='This Was Me']"
                 indicator_selector = success_selector + "|" + fail_selector + "|" + suspicious_page_selector
 
