@@ -1,12 +1,19 @@
-run-1.48（进行中）
+run-2.00（进行中）
+------------------------------------------------------------------------
+1.全面启用InstaPy
+2.全面改版login流程，标准化每个步骤的判定和执行，大幅提高可维护性和可拓展性
+
+
+run-1.48
 ------------------------------------------------------------------------
 1.新增半速版本的follow，like脚本
 2.由于最近发生的代理无法连接的问题，install.sh现在固定安装66.0版本的firefox，并阻止自动更新
+3.在login流程中，增加对2-way authentication页面的支持
 
 
 droplet-1.05（进行中）
 ------------------------------------------------------------------------
-1.支持不使用代理进行login
+1.支持不使用代理进行login。新增一个参数--use-proxy来控制是否使用代理，默认为使用
 
 
 run-1.47
